--- a/package.json
+++ b/package.json
@@ -1,31 +1,52 @@
 {
-  "name": "light_replica",
-  "version": "1.0.0",
+  "name": "lightic",
+  "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "lib/esm/index.js",
   "scripts": {
     "lint": "yarn prettier --check && yarn eslint",
     "lint:fix": "yarn prettier --write && yarn eslint --fix",
     "eslint": "eslint 'src/**/*.ts' 'test/**/*.ts'",
-    "prettier": "prettier \"**/*.{js,md,json}\"",
-    "test": "mocha --recursive \"test/**/*.ts\"",
-    "test:except-tracing": "mocha --recursive \"test/**/*.ts\" --invert --grep \"Stack traces\"",
-    "test:tracing": "mocha --recursive \"test/internal/hardhat-network/{helpers,stack-traces}/**/*.ts\"",
-    "test:forking": "mocha --recursive \"test/internal/hardhat-network/{helpers,jsonrpc,provider}/**/*.ts\"",
+    "prettier": "prettier \"src/**/*.{js,md,json,ts}\"",
+    "test": "DEBUG=lightic* mocha --recursive \"test/**/*.ts\"",
     "build": "tsc --build .",
-    "prepublishOnly": "yarn build",
-    "clean": "rimraf builtin-tasks internal types utils *.d.ts *.map *.js build-test tsconfig.tsbuildinfo test/internal/hardhat-network/provider/.hardhat_node_test_cache"
+    "buildWasmTools": "cd ./src/wasm_tools && yarn build && cd ../../",
+    "copyWasmTools": "[ -d ./lib/esm/wasm_tools ] || mkdir ./lib/esm/wasm_tools && cp -r ./src/wasm_tools/pkg ./lib/esm/wasm_tools/pkg",
+    "prePublish": "yarn build && yarn buildWasmTools && yarn copyWasmTools"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.3.4",
+    "@types/debug": "^4.1.7",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.13.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "chai": "^4.3.7",
+    "eslint": "^8.0.1",
+    "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "mocha": "^10.2.0",
+    "prettier": "^2.8.4",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "*"
   },
   "dependencies": {
+    "@dfinity/agent": "^0.15.4",
     "@dfinity/candid": "^0.15.3",
+    "@dfinity/nns": "^0.14.0",
     "@dfinity/principal": "^0.15.3",
-    "@types/node": "^18.13.0",
-    "cbor-x": "^1.5.1"
-  }
+    "@dfinity/utils": "^0.0.12",
+    "cbor-x": "^1.5.1",
+    "debug": "^4.3.4",
+    "pako": "^2.1.0"
+  },
+  "files": [
+    "lib/esm",
+    "lib/esm/wasm_tools/pkg/wasm_tools_bg.wasm",
+    "lib/esm/wasm_tools/pkg/wasm_tools.d.ts",
+    "lib/esm/wasm_tools/pkg/wasm_tools.js"
+  ]
 }
