--- a/src/wasm_tools/Cargo.toml
+++ b/src/wasm_tools/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "candid_util"
+name = "wasm_tools"
 version = "0.1.0"
 edition = "2021"
 
@@ -10,7 +10,10 @@ crate-type = ["cdylib"]
 
 [dependencies]
 candid = "0.8.4"
+serde_json = "1.0.96"
 wasm-bindgen = "0.2.84"
+wasm-encoder = "0.20.0"
+wasmparser = "0.95.0"
 
 [profile.release]
 lto = true
