--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,13 @@
     "compilerOptions": {
       "module": "commonjs",
       "esModuleInterop": true,
-      "target": "es2020",
+      "target": "ES2020",
       "moduleResolution": "node",
       "sourceMap": true,
-      "outDir": "dist"
+      "outDir": "./lib/esm",
+      "strictNullChecks": true,
+      "declaration": true
     },
-    "lib": ["es2015"]
+    "lib": ["es2015"],
+    "exclude": ["./test","./lib"]
 }
