--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "tsc --build .",
     "buildWasmTools": "cd ./src/wasm_tools && yarn build && cd ../../",
     "copyWasmTools": "[ -d ./lib/esm/wasm_tools ] || mkdir ./lib/esm/wasm_tools && cp -r ./src/wasm_tools/pkg ./lib/esm/wasm_tools/pkg",
-    "prePublish": "yarn build && yarn buildWasmTools && yarn copyWasmTools"
+    "prePublish": "yarn buildWasmTools && yarn build && yarn copyWasmTools"
   },
   "author": "",
   "license": "ISC",
