--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - name: wasm-pack-action
+      # You may pin to the exact commit or the version.
+      # uses: jetli/wasm-pack-action@0d096b08b4e5a7de8c28de67e11e945404e9eefa
+      uses: jetli/wasm-pack-action@v0.4.0
     - run: yarn
     - run: npm run prePublish --if-present
     - run: npm test
