--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,6 +7,7 @@
       "sourceMap": true,
       "outDir": "../lib/esm",
       "strictNullChecks": true,
+      "declaration": true
     },
     "lib": ["es2015"],
 }
