--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "lint:fix": "yarn prettier --write && yarn eslint --fix",
     "eslint": "eslint 'src/**/*.ts' 'test/**/*.ts'",
     "prettier": "prettier \"src/**/*.{js,md,json,ts}\"",
-    "test": "DEBUG=lightic* mocha --recursive \"test/**/*.ts\"",
+    "test": "yarn buildSpecTest && DEBUG=lightic* mocha --recursive \"test/**/*.ts\"",
     "build": "tsc --build ./src",
     "buildWasmTools": "cd ./src/wasm_tools && yarn build && cd ../../",
+    "buildSpecTest": "cd ./spec_test && cargo build --target wasm32-unknown-unknown --release",
     "copyWasmTools": "[ -d ./lib/esm/wasm_tools ] || mkdir ./lib/esm/wasm_tools && cp -r ./src/wasm_tools/pkg ./lib/esm/wasm_tools/pkg",
     "prePublish": "yarn buildWasmTools && yarn build && yarn copyWasmTools"
   },
