--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "mochaExplorer.require": "ts-node/register",
     "mochaExplorer.env": { "DEBUG": "lightic*" },
     "cSpell.words": [
+        "cbor",
         "dfinity",
         "ecid",
         "icrc",
