--- a/package.json
+++ b/package.json
@@ -40,8 +40,12 @@
     "@dfinity/nns": "^0.14.0",
     "@dfinity/principal": "^0.15.3",
     "@dfinity/utils": "^0.0.12",
-    "cbor-x": "^1.5.1",
+    "@types/cbor": "^6.0.0",
+    "@types/express": "^4.17.17",
+    "simple-cbor": "^0.4.1",
     "debug": "^4.3.4",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "pako": "^2.1.0"
   },
   "files": [
