--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "@dfinity/utils": "^0.0.12",
     "cbor-x": "^1.5.1",
     "debug": "^4.3.4",
-    "pako": "^2.1.0"
+    "express": "^4.18.2",
+    "pako": "^2.1.0",
+    "simple-cbor": "^0.4.1"
   },
   "files": [
     "lib/esm",
