--- a/package.json
+++ b/package.json
@@ -22,29 +22,33 @@
     "@types/debug": "^4.1.7",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.13.0",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
     "chai": "^4.3.7",
-    "eslint": "^8.0.1",
-    "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint": "^8.39.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "mocha": "^10.2.0",
     "prettier": "^2.8.4",
     "ts-node": "^10.9.1",
-    "typescript": "*"
+    "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@chiachat/amcl": "^4.0.0",
     "@dfinity/agent": "^0.15.4",
     "@dfinity/candid": "^0.15.3",
     "@dfinity/nns": "^0.14.0",
     "@dfinity/principal": "^0.15.3",
     "@dfinity/utils": "^0.0.12",
-    "cbor-x": "^1.5.1",
+    "@miracl/crypto-js": "^4.0.0",
+    "@noble/curves": "^1.0.0",
+    "bls-wasm": "^1.0.1",
+    "cbor": "^8.1.0",
     "debug": "^4.3.4",
     "express": "^4.18.2",
-    "pako": "^2.1.0",
-    "simple-cbor": "^0.4.1"
+    "pako": "^2.1.0"
   },
   "files": [
     "lib/esm",
