--- a/src/wasm_tools/Cargo.toml
+++ b/src/wasm_tools/Cargo.toml
@@ -16,6 +16,7 @@ std = []
 
 [dependencies]
 candid = "0.8.4"
+getrandom = { version = "0.2.9", features=['js'] }
 miracl_core_bls12381 = { version="4.2.2", default-features=false, features= ['wasm-bindgen', 'allow_alt_compress'] } 
 serde_json = "1.0.96"
 wasm-bindgen = "0.2.84"
