--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "",
   "main": "lib/esm/index.js",
+  "bin": "lib/esm/server.js",
   "scripts": {
     "lint": "yarn prettier --check && yarn eslint",
     "lint:fix": "yarn prettier --write && yarn eslint --fix",
@@ -42,6 +43,7 @@
     "@dfinity/principal": "^0.15.3",
     "@dfinity/utils": "^0.0.12",
     "cbor": "^8.1.0",
+    "commander": "^10.0.1",
     "debug": "^4.3.4",
     "express": "^4.18.2",
     "pako": "^2.1.0"
