--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "prePublish": "yarn buildWasmTools && yarn build && yarn copyWasmTools"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@types/chai": "^4.3.4",
     "@types/debug": "^4.1.7",
