--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "commander": "^10.0.1",
     "debug": "^4.3.4",
     "express": "^4.18.2",
-    "pako": "^2.1.0"
+    "pako": "^2.1.0",
+    "js-sha256": "0.9.0"
   },
   "files": [
     "lib/esm",
