--- a/package.json
+++ b/package.json
@@ -34,20 +34,28 @@
     "mocha": "^10.2.0",
     "prettier": "^2.8.4",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
-  },
-  "dependencies": {
+    "typescript": "^5.0.4",
     "@dfinity/agent": "^0.15.4",
     "@dfinity/candid": "^0.15.3",
     "@dfinity/nns": "^0.14.0",
     "@dfinity/principal": "^0.15.3",
-    "@dfinity/utils": "^0.0.12",
+    "@dfinity/utils": "^0.0.12"
+  },
+  "peerDependencies": {
+    "@dfinity/agent": "^0.15.4",
+    "@dfinity/candid": "^0.15.3",
+    "@dfinity/nns": "^0.14.0",
+    "@dfinity/principal": "^0.15.3",
+    "@dfinity/utils": "^0.0.12"
+  },
+  "dependencies": {
     "cbor": "^8.1.0",
     "commander": "^10.0.1",
     "debug": "^4.3.4",
     "express": "^4.18.2",
     "pako": "^2.1.0",
-    "js-sha256": "0.9.0"
+    "js-sha256": "0.9.0",
+    "axios": "^0.24.0"
   },
   "files": [
     "lib/esm",
