--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lightic",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "description": "",
   "main": "lib/esm/index.js",
   "bin": "lib/esm/server.js",
@@ -13,7 +13,7 @@
     "build": "tsc --build ./src",
     "buildWasmTools": "cd ./src/wasm_tools && yarn build && cd ../../",
     "buildSpecTest": "cd ./spec_test && cargo build --target wasm32-unknown-unknown --release",
-    "copyWasmTools": "[ -d ./lib/esm/wasm_tools ] || mkdir ./lib/esm/wasm_tools && cp -r ./src/wasm_tools/pkg ./lib/esm/wasm_tools/pkg && rm ./lib/esm/wasm_tools/pkg/.gitignore",
+    "copyWasmTools": "[ -d ./lib/esm/wasm_tools ] || mkdir ./lib/esm/wasm_tools && cp -r ./src/wasm_tools/pkg ./lib/esm/wasm_tools/pkg && (rm ./lib/esm/wasm_tools/pkg/.gitignore || true)",
     "prePublish": "yarn buildWasmTools && yarn build && yarn copyWasmTools"
   },
   "author": "",
